--- a/application/.htaccess
+++ b/application/.htaccess
@@ -1,10 +1,11 @@
 DirectoryIndex index.php index.html
 RewriteEngine on
 # Allow requests for valid file or folder names, or some that should be
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d [OR]
 RewriteCond $1 ^(robots\.txt|favicon\.ico|style\.css)
-RewriteRule ^(.*)$ - [L]
+RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 # use index.php as front controller ...
 RewriteRule ^(.*)$ ./index.php/$1 [L]
 # Turn on IE8-IE9 XSS prevention tools
